# parallel-programming-mpi

./: CMakeLists.txt  main.cpp
hard-tasks/hw-4/: Task_4_2.cpp  Task_4_3.cpp
